--- a/index.html
+++ b/index.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
 
-	 <link
-        href="https://fonts.googleapis.com/css?family=Plus+Jakarta+Sans:200,300,400,500,600,700,800,200i,300i,400i,500i,600i,700i,800i&display=swap"
-        >
-		
-	<link rel="stylesheet" href="./output.css">
-	
-</head>
-<body>
-	<header>
-		<h1 class="bg-slate-200">Coucou</h1>
-	</header>
-	<main>
+    <link
+      href="https://fonts.googleapis.com/css?family=Plus+Jakarta+Sans:200,300,400,500,600,700,800,200i,300i,400i,500i,600i,700i,800i&display=swap"
+    />
 
-
-	</main>
-	<footer>
-
-	</footer>
-</body>
+    <link rel="stylesheet" href="./output.css" />
+  </head>
+  <body>
+    <header class="bg-purple h-[87.7vh]">
+      <div class="white-container bg-red h-[400px]">
+        <div class="header-container flex justify-between">
+          <div class="header-logo">
+            <h1>LearnM5</h1>
+          </div>
+          <div class="header-nav">
+            <ul class="flex">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Team</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Testimonials</a></li>
+              <li><a href="#">Help</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
