--- a/index.html
+++ b/index.html
@@ -11,27 +11,47 @@
 
     <link rel="stylesheet" href="./output.css" />
   </head>
+
   <body>
-    <header class="bg-purple h-[87.7vh]">
-      <div class="white-container bg-red h-[400px]">
-        <div class="header-container flex justify-between">
-          <div class="header-logo">
-            <h1>LearnM5</h1>
-          </div>
-          <div class="header-nav">
-            <ul class="flex">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Features</a></li>
-              <li><a href="#">Team</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Testimonials</a></li>
-              <li><a href="#">Help</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </header>
+	<header class="flex justify-center items-center bg-purple h-[87.7vh]">
+		<div class="white-container bg-white w-[88vw] h-[77vh] rounded-2xl overflow-hidden relative">
+		  <!-- NavBar-->
+		  <div class="header-container flex justify-between items-center mt-4 mx-10">
+			<div class="header-logo">
+			  <h1 class="font-bold text-3xl">LearnM5</h1>
+			</div>
+			<div class="header-nav gap-4 flex">
+			  <ul class="flex gap-10 bg-grey text-2xl px-10 py-2 rounded-2xl">
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Features</a></li>
+				<li><a href="#">Team</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Testimonials</a></li>
+				<li><a href="#">Help</a></li>
+				<li><a href="#">Contact</a></li>
+			  </ul>
+			</div>
+		  </div>
+	  
+		  <!-- Content Header -->
+		  <div class="content flex flex-row w-full h-full">
+			<div class="content-header flex flex-col w-1/2 mt-20">
+			  <h1 class="text-7xl font-bold mb-6 mx-16">Online Spanish Courses</h1>
+			  <p class="text-2xl mt-4 mx-16">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores explicabo aperiam aliquam natus nostrum, odio perferendis, magni ducimus pariatur, quod aut. Veritatis, tempore suscipit ipsa eos maiores ipsum similique id.</p>
+			  <button class="bg-purple text-white px-4 rounded-xl mt-4 w-1/3 py-4 text-xl mx-16">
+				Get Started
+			  </button>
+			</div>
+			<div class="bg-header-image w-1/2 bg-cover">
+			</div>
+		  </div>
+		</div>
+	  </header>
+	  
+
+
+
+
     <main></main>
     <footer></footer>
   </body>
