[ADD] Div content [ADD] Div features

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 	<header class="flex justify-center items-center bg-purple h-[87.7vh]">
 		<div class="white-container bg-white w-[88vw] h-[77vh] rounded-2xl overflow-hidden relative">
 		  <!-- NavBar-->
-		  <div class="header-container flex justify-between items-center mt-4 mx-10">
+		  <div class="header-container flex justify-between items-center mt-4 mx-10 ">
 			<div class="header-logo">
 			  <h1 class="font-bold text-3xl">LearnM5</h1>
 			</div>
-			<div class="header-nav gap-4 flex">
-			  <ul class="flex gap-10 bg-grey text-2xl px-10 py-2 rounded-2xl">
+			<div class="header-nav gap-4 flex ">
+			  <ul class="flex gap-10 bg-purple text-2xl px-10 py-2 rounded-2xl">
 				<li><a href="#">Home</a></li>
 				<li><a href="#">Features</a></li>
 				<li><a href="#">Team</a></li>
@@ -34,7 +34,7 @@
 		  </div>
 	  
 		  <!-- Content Header -->
-		  <div class="content flex flex-row w-full h-full">
+		  <div class="content flex flex-row w-full h-full relative">
 			<div class="content-header flex flex-col w-1/2 mt-20">
 			  <h1 class="text-7xl font-bold mb-6 mx-16">Online Spanish Courses</h1>
 			  <p class="text-2xl mt-4 mx-16">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores explicabo aperiam aliquam natus nostrum, odio perferendis, magni ducimus pariatur, quod aut. Veritatis, tempore suscipit ipsa eos maiores ipsum similique id.</p>
@@ -42,7 +42,7 @@
 				Get Started
 			  </button>
 			</div>
-			<div class="bg-header-image w-1/2 bg-cover">
+			<div class="bg-header-image w-1/2 bg-cover h-full relative">
 			</div>
 		  </div>
 		</div>
@@ -52,7 +52,67 @@
 
 
 
-    <main></main>
+    <main>
+		<div class="features-container pb-10 ">
+			<h1 class="font-bold text-darkMedium text-7xl text-center mt-16  mb-10">Our Features </h1>
+			<div class="features flex gap-10 mx-28 ">
+				<div class="feature flex flex-col border-2 border-solid border-darkMedium h-full w-full gap-4">
+					<h3 class="text-xl mx-8 mt-6">1</h3>
+					<h2 class="text-3xl font-bold mx-8">Modern teaching methods</h2>
+					<p class="mx-8 text-2xl mb-8">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero praesentium voluptates suscipit obcaecati sint doloremque ex quis odio excepturi dolorem.</p>
+					<img src="./assets/img/2.jpg" alt="2" class="h-[270px] object-cover">
+				</div>
+
+				<div class="feature flex flex-col border-2 border-solid border-darkMedium h-full w-full gap-4">
+					<h3 class="text-xl mx-8 mt-6">2</h3>
+					<h2 class="text-3xl font-bold mx-8">Modern teaching methods</h2>
+					<p class="mx-8 text-2xl mb-8">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero praesentium voluptates suscipit obcaecati sint doloremque ex quis odio excepturi dolorem.</p>
+					<img src="./assets/img/3.jpg" alt="2" class="h-[270px] object-cover">
+				</div>
+
+				<div class="feature flex flex-col border-2 border-solid border-darkMedium h-full w-full gap-4">
+					<h3 class="text-xl mx-8 mt-6">3</h3>
+					<h2 class="text-3xl font-bold mx-8">Modern teaching methods</h2>
+					<p class="mx-8 text-2xl mb-8">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero praesentium voluptates suscipit obcaecati sint doloremque ex quis odio excepturi dolorem.</p>
+					<img src="./assets/img/4.jpg" alt="2" class="h-[270px] object-cover">
+				</div>
+
+				<div class="feature flex flex-col border-2 border-solid border-darkMedium h-full w-full gap-4">
+					<h3 class="text-xl mx-8 mt-6">4</h3>
+					<h2 class="text-3xl font-bold mx-8">Modern teaching methods</h2>
+					<p class="mx-8 text-2xl mb-8">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero praesentium voluptates suscipit obcaecati sint doloremque ex quis odio excepturi dolorem.</p>
+					<img src="./assets/img/5.jpg" alt="2" class="h-[270px] object-cover">
+				</div>
+			</div>
+		</div>
+
+		<div class="go-container bg-purple w-full">
+			<h1 class="text text-center text-7xl py-10 text-white">go!</h1>
+
+			<div class="boxes flex w-full gap-8 mx-auto flex-wrap items-center justify-center">
+				<div class="boxe border border-solid border-white rounded-xl inline-block w-1/4">
+					<h1 class="text-4xl font-bold text-white ">136</h1>
+					<p class="text-2xl text-white">Unique Colors</p>
+				</div>
+
+				<div class="boxe border border-solid border-white rounded-xl inline-block w-1/4">
+					<h1 class="text-4xl font-bold text-white w-full">136</h1>
+					<p class="text-2xl text-white">Unique Colors</p>
+				</div>
+
+				<div class="boxe border border-solid border-white rounded-xl inline-block w-1/4">
+					<h1 class="text-4xl font-bold text-white w-full">136</h1>
+					<p class="text-2xl text-white">Unique Colors</p>
+				</div>
+
+				<div class="boxe border border-solid border-white rounded-xl inline-block w-1/4">
+					<h1 class="text-4xl font-bold text-white w-full">136</h1>
+					<p class="text-2xl text-white">Unique Colors</p>
+				</div>
+			</div>
+		</div>
+
+	</main>
     <footer></footer>
   </body>
 </html>
