--- a/index.html
+++ b/index.html
@@ -86,33 +86,86 @@
 			</div>
 		</div>
 
-		<div class="go-container bg-purple w-full">
+		<div class="go-container bg-purple w-full pb-16">
 			<h1 class="text text-center text-7xl py-10 text-white">go!</h1>
 		
-			<div class="boxes flex flex-wrap justify-center gap-8">
-				<div class="boxe border border-solid border-white rounded-xl inline-block sm:w-1/2 md:w-1/4">
-					<h1 class="text-4xl font-bold text-white">136</h1>
-					<p class="text-2xl text-white">Unique Colors</p>
+			<div class="boxes flex flex-wrap justify-center gap-8 ">
+				<div class="boxe border border-solid border-white rounded-2xl sm:w-1/2 w-[350px] p-8 flex flex-col justify-center md:items-center md:w-[450px] ">
+					<h1 class="text-7xl font-bold text-white ml-6 mb-4 md:ml-0">136</h1>
+					<div class="box-content flex flex-col">
+					<p class="text-2xl text-white ml-8 md:ml-0">Unique</p>
+					<p class="text-2xl text-white ml-8 md:ml-0">Colors</p>
+					</div>
 				</div>
 		
-				<div class="boxe border border-solid border-white rounded-xl inline-block  sm:w-1/2 md:w-1/4">
-					<h1 class="text-4xl font-bold text-white">136</h1>
-					<p class="text-2xl text-white">Unique Colors</p>
+				<div class="boxe border border-solid border-white rounded-2xl sm:w-1/2 w-[350px] p-8 flex flex-col justify-center md:items-center md:w-[450px] ">
+					<h1 class="text-7xl font-bold text-white ml-6 mb-4 md:ml-0">117</h1>
+					<div class="box-content flex flex-col">
+					<p class="text-2xl text-white ml-8 md:ml-0">Supers</p>
+					<p class="text-2xl text-white ml-8 md:ml-0">Professeurs</p>
+					</div>
+				</div>
+				<div class="boxe border border-solid border-white rounded-2xl sm:w-1/2 w-[350px] p-8 flex flex-col justify-center md:items-center md:w-[450px] ">
+					<h1 class="text-7xl font-bold text-white ml-6 mb-4 md:ml-0">734</h1>
+					<div class="box-content flex flex-col">
+					<p class="text-2xl text-white ml-8 md:ml-0">Etudiant.es</p>
+					<p class="text-2xl text-white ml-8 md:ml-0">Satisfait.es</p>
+					</div>
+				</div>
+				<div class="boxe border border-solid border-white rounded-2xl sm:w-1/2 w-[350px] p-8 flex flex-col justify-center md:items-center md:w-[450px] ">
+					<h1 class="text-7xl font-bold text-white ml-6 mb-4 md:ml-0">346</h1>
+					<div class="box-content flex flex-col">
+					<p class="text-2xl text-white ml-8 md:ml-0">Diplôme</p>
+					<p class="text-2xl text-white ml-8 md:ml-0">Obtenus</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="footer bg-black text-white">
+			<div class="footer-content flex justify-evenly w-full pt-16 text-xl md:flex-col md:justify-center md:gap-8 md:items-center">
+				<div class="footer-one flex flex-col md:justify-center md:items-center">
+					<p class="font-bold">+1(234)567-89-01</p>
+					<p class="max-w-[250px] md:max-w-[500px]">Lorem ipsum, dolor sit amet consectur adipisicing elit.</p>
+				</div>
+				<div class="footer-second">
+					<p>Copyright 2024 B1 MDS</p>
+					<p>All Rights Reserved</p>
 				</div>
 		
-				<div class="boxe border border-solid border-white rounded-xl inline-block sm:w-1/2 md:w-1/4">
-					<h1 class="text-4xl font-bold text-white">136</h1>
-					<p class="text-2xl text-white">Unique Colors</p>
+				<div class="footer-third">
+					<p class="font-bold mb-4">Features</p>
+					<ul>
+						<li>About</li>
+						<li>Features</li>
+						<li>Pricing</li>
+						<li>Teams</li>
+					</ul>
 				</div>
 		
-				<div class="boxe border border-solid border-white rounded-xl inline-block  sm:w-1/2 md:w-1/4">
-					<h1 class="text-4xl font-bold text-white">136</h1>
-					<p class="text-2xl text-white">Unique Colors</p>
+				
+				<div class="footer-fourth">
+					<p class="font-bold mb-4">Infos</p>
+					<ul>
+						<li>About</li>
+						<li>Features</li>
+						<li>Pricing</li>
+						<li>Teams</li>
+					</ul>
 				</div>
+			</div>
+			<hr class="mt-32 mb-10 mx-20 md:mx-auto md:mt-16" > <!-- Ajout de la barre blanche -->
+
+			<div class="bottom-footer flex justify-evenly  pb-8 md:flex-col md:justify-center md:items-center md:mt-8 md:gap-4 text-xl">
+				<p>© Copyright 2024 </p>
+				<p>superemail@gmail.com</p>
+				<p>Fais par une classe badass</p>
 			</div>
 		</div>
 		
 
+
+</div>
 	</main>
     <footer></footer>
   </body>
