--- a/index.html
+++ b/index.html
@@ -13,8 +13,27 @@
   </head>
 
   <body>
+	<div class="navbar-burger z-20 bg-white fixed top-0 text-black w-full justify-between py-3 px-2 hidden md:flex ">
+		<h1 class="font-bold">LearnM5</h1>
+		<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 8h22M5 16h22M5 24h22"/></svg>
+	</div>
+	<div class="toggle-menu opacity-0 ">
+		<ul class=" gap-4 flex flex-col fixed mt-14 justify-center items-center z-20 text-xl bg-white w-full   ">
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Features</a></li>
+			<li><a href="#">Team</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Testimonials</a></li>
+			<li><a href="#">Help</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</div>
+
 	<header class="flex justify-center items-center bg-purple h-[87.7vh] md:h-[80vh]">
-		<div class="white-container bg-white w-[88vw] h-[77vh] rounded-2xl overflow-hidden relative">
+
+
+
+		<div class="white-container bg-white w-[88vw] h-[77vh] rounded-3xl overflow-hidden relative">
 		  <!-- NavBar-->
 		  <div class="header-container flex justify-between items-center mt-4 mx-10 ">
 			<div class="header-logo">
@@ -32,6 +51,8 @@
 			  </ul>
 			</div>
 		  </div>
+
+		
 	  
 		  <!-- Content Header -->
 		  <div class="content flex flex-row w-full h-full relative md:flex-col ">
@@ -126,14 +147,14 @@
 			<div class="footer-content flex justify-evenly w-full pt-16 text-xl md:flex-col md:justify-center md:gap-8 md:items-center">
 				<div class="footer-one flex flex-col md:justify-center md:items-center">
 					<p class="font-bold">+1(234)567-89-01</p>
-					<p class="max-w-[250px] md:max-w-[500px]">Lorem ipsum, dolor sit amet consectur adipisicing elit.</p>
+					<p class="max-w-[250px] ">Lorem ipsum, dolor sit amet consectur adipisicing elit.</p>
 				</div>
-				<div class="footer-second">
+				<div class="footer-second flex flex-col md:justify-center md:items-center">
 					<p>Copyright 2024 B1 MDS</p>
 					<p>All Rights Reserved</p>
 				</div>
 		
-				<div class="footer-third">
+				<div class="footer-third md:justify-center md:items-center">
 					<p class="font-bold mb-4">Features</p>
 					<ul>
 						<li>About</li>
@@ -144,7 +165,7 @@
 				</div>
 		
 				
-				<div class="footer-fourth">
+				<div class="footer-fourth md:justify-center md:items-center">
 					<p class="font-bold mb-4">Infos</p>
 					<ul>
 						<li>About</li>
@@ -154,7 +175,7 @@
 					</ul>
 				</div>
 			</div>
-			<hr class="mt-32 mb-10 mx-20 md:mx-auto md:mt-16" > <!-- Ajout de la barre blanche -->
+			<hr class="mt-32 mb-10 mx-24 md:mx-auto md:mt-16" >
 
 			<div class="bottom-footer flex justify-evenly  pb-8 md:flex-col md:justify-center md:items-center md:mt-8 md:gap-4 text-xl">
 				<p>© Copyright 2024 </p>
@@ -169,4 +190,11 @@
 	</main>
     <footer></footer>
   </body>
+  <script>
+	const burger = document.querySelector('.navbar-burger svg');
+	const menu = document.querySelector('.toggle-menu');
+	burger.addEventListener('click', () => {
+		menu.classList.toggle('opacity-0');
+	});
+  </script>
 </html>
