--- a/index.html
+++ b/index.html
@@ -74,31 +74,32 @@
 
 
     <main>
+		<!-- Features -->
 		<div class="features-container pb-10 ">
 			<h1 class="font-bold text-darkMedium text-7xl text-center mt-16  mb-10 md:text-5xl">Our Features </h1>
 			<div class="features flex gap-10 mx-28 flex-wrap items-center justify-center md:mx-6">
-				<div class="feature flex flex-col border-2 border-solid border-darkMedium h-full w-[320px] gap-4">
+				<div class="feature">
 					<h3 class="text-xl mx-8 mt-6">1</h3>
 					<h2 class="text-3xl font-bold mx-8 md:text-xl text-darkMedium">Modern teaching methods</h2>
 					<p class="mx-8 text-2xl mb-8 md:text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero praesentium voluptates suscipit obcaecati sint doloremque ex quis odio excepturi dolorem.</p>
 					<img src="./assets/img/2.jpg" alt="2" class="h-[270px] object-cover md:h-[150px]">
 				</div>
 
-				<div class="feature flex flex-col border-2 border-solid border-darkMedium h-full w-[320px]  gap-4">
+				<div class="feature ">
 					<h3 class="text-xl mx-8 mt-6">2</h3>
 					<h2 class="text-3xl font-bold mx-8 md:text-xl text-darkMedium">Modern teaching methods</h2>
 					<p class="mx-8 text-2xl mb-8 md:text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero praesentium voluptates suscipit obcaecati sint doloremque ex quis odio excepturi dolorem.</p>
 					<img src="./assets/img/3.jpg" alt="2" class="h-[270px] object-cover md:h-[150px]">
 				</div>
 
-				<div class="feature flex flex-col border-2 border-solid border-darkMedium h-full w-[320px] gap-4">
+				<div class="feature">
 					<h3 class="text-xl mx-8 mt-6">3</h3>
 					<h2 class="text-3xl font-bold mx-8 md:text-xl text-darkMedium">Modern teaching methods</h2>
 					<p class="mx-8 text-2xl mb-8 md:text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero praesentium voluptates suscipit obcaecati sint doloremque ex quis odio excepturi dolorem.</p>
 					<img src="./assets/img/4.jpg" alt="2" class="h-[270px] object-cover md:h-[150px]">
 				</div>
 
-				<div class="feature flex flex-col border-2 border-solid border-darkMedium h-full w-[320px] gap-4">
+				<div class="feature">
 					<h3 class="text-xl mx-8 mt-6">4</h3>
 					<h2 class="text-3xl font-bold mx-8 md:text-xl text-darkMedium">Modern teaching methods</h2>
 					<p class="mx-8 text-2xl mb-8 md:text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero praesentium voluptates suscipit obcaecati sint doloremque ex quis odio excepturi dolorem.</p>
@@ -111,30 +112,30 @@
 			<h1 class="text text-center text-7xl py-10 text-white">go!</h1>
 		
 			<div class="boxes flex flex-wrap justify-center gap-8 ">
-				<div class="boxe border border-solid border-white rounded-2xl sm:w-1/2 w-[350px] p-8 flex flex-col justify-center md:items-center md:w-[450px] ">
-					<h1 class="text-7xl font-bold text-white ml-6 mb-4 md:ml-0">136</h1>
+				<div class="boxe">
+					<h1 class="text-7xl font-bold text-white ml-6 mb-4 md:ml-0 md:text-4xl">136</h1>
 					<div class="box-content flex flex-col">
 					<p class="text-2xl text-white ml-8 md:ml-0">Unique</p>
 					<p class="text-2xl text-white ml-8 md:ml-0">Colors</p>
 					</div>
 				</div>
 		
-				<div class="boxe border border-solid border-white rounded-2xl sm:w-1/2 w-[350px] p-8 flex flex-col justify-center md:items-center md:w-[450px] ">
-					<h1 class="text-7xl font-bold text-white ml-6 mb-4 md:ml-0">117</h1>
+				<div class="boxe">
+					<h1 class="text-7xl font-bold text-white ml-6 mb-4 md:ml-0 md:text-4xl">117</h1>
 					<div class="box-content flex flex-col">
 					<p class="text-2xl text-white ml-8 md:ml-0">Supers</p>
 					<p class="text-2xl text-white ml-8 md:ml-0">Professeurs</p>
 					</div>
 				</div>
-				<div class="boxe border border-solid border-white rounded-2xl sm:w-1/2 w-[350px] p-8 flex flex-col justify-center md:items-center md:w-[450px] ">
-					<h1 class="text-7xl font-bold text-white ml-6 mb-4 md:ml-0">734</h1>
+				<div class="boxe">
+					<h1 class="text-7xl font-bold text-white ml-6 mb-4 md:ml-0 md:text-4xl">734</h1>
 					<div class="box-content flex flex-col">
 					<p class="text-2xl text-white ml-8 md:ml-0">Etudiant.es</p>
 					<p class="text-2xl text-white ml-8 md:ml-0">Satisfait.es</p>
 					</div>
 				</div>
-				<div class="boxe border border-solid border-white rounded-2xl sm:w-1/2 w-[350px] p-8 flex flex-col justify-center md:items-center md:w-[450px] ">
-					<h1 class="text-7xl font-bold text-white ml-6 mb-4 md:ml-0">346</h1>
+				<div class="boxe">
+					<h1 class="text-7xl font-bold text-white ml-6 mb-4 md:ml-0 md:text-4xl">346</h1>
 					<div class="box-content flex flex-col">
 					<p class="text-2xl text-white ml-8 md:ml-0">Diplôme</p>
 					<p class="text-2xl text-white ml-8 md:ml-0">Obtenus</p>
