--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			<h1 class="text text-center text-7xl py-10 text-white">go!</h1>
 		
 			<div class="boxes flex flex-wrap justify-center gap-8 ">
-				<div class="boxe">
+				<div class="boxe md:items-center">
 					<h1 class="text-7xl font-bold text-white ml-6 mb-4 md:ml-0 md:text-4xl">136</h1>
 					<div class="box-content flex flex-col">
 					<p class="text-2xl text-white ml-8 md:ml-0">Unique</p>
@@ -127,6 +127,7 @@
 					<p class="text-2xl text-white ml-8 md:ml-0">Professeurs</p>
 					</div>
 				</div>
+
 				<div class="boxe">
 					<h1 class="text-7xl font-bold text-white ml-6 mb-4 md:ml-0 md:text-4xl">734</h1>
 					<div class="box-content flex flex-col">
