--- a/index.html
+++ b/index.html
@@ -108,15 +108,17 @@
 			</div>
 		</div>
 
-		<div class="go-container bg-purple w-full pb-16">
-			<h1 class="text text-center text-7xl py-10 text-white">go!</h1>
+		<div class="go-container bg-purple w-full pb-16 relative pt-12">
+			<h1 class="text text-center text-7xl py-10 text-white z-10 relative font-bold">go!</h1>
 		
+			<svg xmlns="http://www.w3.org/2000/svg" class="-mt-40 z-0 relative mx-auto" width="250" height="250" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1); transform: scaleX(-1);"><path d="M12 2C6.486 2 2 5.589 2 10c0 2.908 1.898 5.515 5 6.934V22l5.34-4.005C17.697 17.852 22 14.32 22 10c0-4.411-4.486-8-10-8z"></path></svg>
+			
 			<div class="boxes flex flex-wrap justify-center gap-8 ">
 				<div class="boxe md:items-center">
 					<h1 class="text-7xl font-bold text-white ml-6 mb-4 md:ml-0 md:text-4xl">136</h1>
 					<div class="box-content flex flex-col">
-					<p class="text-2xl text-white ml-8 md:ml-0">Unique</p>
-					<p class="text-2xl text-white ml-8 md:ml-0">Colors</p>
+						<p class="text-2xl text-white ml-8 md:ml-0">Unique</p>
+						<p class="text-2xl text-white ml-8 md:ml-0">Colors</p>
 					</div>
 				</div>
 		
