[FIX] Header image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Intégration de Nicolas le bg</title>
 
     <link
       href="https://fonts.googleapis.com/css?family=Plus+Jakarta+Sans:200,300,400,500,600,700,800,200i,300i,400i,500i,600i,700i,800i&display=swap"
@@ -39,8 +39,8 @@
 			<div class="header-logo">
 			  <h1 class="font-bold text-3xl md:hidden">LearnM5</h1>
 			</div>
-			<div class="header-nav gap-4 flex md:hidden">
-			  <ul class="flex gap-10 bg-purple text-2xl px-10 py-2 rounded-2xl">
+			<div class="header-nav gap-4 flex md:hidden z-10 ">
+			  <ul class="flex gap-10 bg-white text-2xl px-10 py-2 rounded-2xl">
 				<li><a href="#">Home</a></li>
 				<li><a href="#">Features</a></li>
 				<li><a href="#">Team</a></li>
@@ -63,7 +63,7 @@
 				Get Started
 			  </button>
 			</div>
-			<div class="bg-header-image w-1/2 bg-cover h-full relative md:w-full md:h-2/4">
+			<div class="bg-header-image z-0 -mt-16 w-1/2 bg-cover h-full relative md:w-full md:h-2/4 md:mt-0">
 			</div>
 		  </div>
 		</div>
