--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 		  <!-- Content Home -->
 		  <div class="content flex flex-row w-full h-full relative md:flex-col ">
 			<div class="content-header flex flex-col w-1/2 mt-20 md:w-full md:mt-5">
-			  <h1 class="text-7xl font-bold mb-6 mx-16 md:mx-8 md:text-3xl md:mb-0 md:mt-5">Online Spanish Courses</h1>
+			  <h1 class="text-6xl font-bold mb-6 mx-16 md:mx-8 md:text-3xl md:mb-0 md:mt-5 xl:text-4xl 2xl:-mt-14 xl:mb-0">Online Spanish Courses</h1>
 			  <p class="text-2xl mt-4 mx-16 md:mx-8 md:text-base">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores explicabo aperiam aliquam natus nostrum, odio perferendis, magni ducimus pariatur, quod aut. Veritatis, tempore suscipit ipsa eos maiores ipsum similique id.</p>
-			  <button class="bg-purple text-white px-4 rounded-xl mt-4 w-1/3 py-4 text-xl mx-16 md:mx-8 md:w-[150px] md:mb-8 md:text-base md:py-2">
+			  <button class="bg-purple text-white px-4 rounded-xl mt-4 w-1/3 py-4 text-xl mx-16 md:mx-8 md:w-[150px] md:mb-8 md:text-base md:py-2 xl:text-lg">
 				Get Started
 			  </button>
 			</div>
@@ -76,7 +76,7 @@
 		<!-- Features -->
 		<div id="features" class="features-container pb-10 ">
 			<h1 class="font-bold text-darkMedium text-7xl text-center mt-16  mb-10 md:text-5xl">Our Features </h1>
-			<div class="features flex gap-10 mx-28 flex-wrap items-center justify-center md:mx-6">
+			<div class="features flex gap-10 mx-16 flex-wrap items-center justify-center md:mx-6">
 				<!-- First Feature -->
 				<div class="feature">
 					<h3 class="feature-h3">1</h3>
